<!DOCTYPE resources [
    <!ENTITY appname "ShowTracker">
    <!ENTITY author "FlaCrow">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="retry_but_text"><u>Retry?</u></string>
    <string name="tab_tv_shows">TV Shows</string>
    <string name="tab_movies">Movies</string>
    <string name="action_search">Search</string>
    <string name="aired_string">"First Aired: %s"</string>
    <string name="released_in_string">Last Aired:\n%s</string>
    <string name="season_string">Season %d</string>
    <string name="watch_history_string">Episode %s watched date:\n%s</string>
    <string name="episodes_watched">"Episodes\nWatched: "</string>
    <string name="out_of">" out of %s"</string>
    <string name="title_year_parenthesis">"%s (%s)"</string>
    <string name="no_info">"No Information"</string>
    <string name="poster_content_desc">Poster</string>
    <string name="add_button_content_desc">Add Button</string>
    <string name="subtract_button_content_desc">Subtract Button</string>
    <string name="details_button_text">Details</string>
    <string name="no_overview">No overview available for this show</string>
    <string name="trending">Trending</string>
    <string name="plan_to_watch">Plan To Watch</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="details_button_content_desc">Button for revealing timestamps</string>
    <string name="media_type_image_view">Media Type Image View</string>
    <string name="poster_image_view">Poster Image View</string>
    <string name="settings_database_export">Export Backup File</string>
    <string name="settings_database_import">Import Backup File</string>
    <string name="settings_database_clear">Clear Database</string>
    <string name="settings_update_on_interact">Update cached TV series when accessed</string>
    <string name="settings_update_in_background">Update TV series in the background and show notifications</string>
    <string name="settings_tmdb_thanks">ShowTracker uses TMDb but is not endorsed or certified by TMDb</string>
    <string name="settings_info">&appname; is made by &author; \nBuild Type: %s\nVersion: %s</string>
    <string name="app_logo_desc">App logo</string>
    <string name="tmdb_logo_description">The Movie Database Logo</string>
    <string name="ep_aired_string">Aired:</string>
    <string name="ep_watched_string">Watched:</string>
    <string name="avg_rating_string">Avg.\nrating</string>
    <string name="no_tagline_string">No Tagline Available</string>
    <string name="no_overview_available_string">No Overview Available</string>
    <string name="watched_never_string">Never</string>
</resources>