<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/db_import_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/grid_2"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/ic_app" />

    <TextView
        android:id="@+id/settings_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/grid_2"
        android:gravity="center"
        android:text="@string/settings_tmdb_thanks"
        android:textAppearance="?textAppearanceBody1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2"
        android:contentDescription="@string/tmdb_logo_description"
        android:src="@drawable/ic_tmdb_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/grid_2"
        android:gravity="center"
        android:text="@string/settings_tmdb_thanks"
        android:textAppearance="?textAppearanceBody1" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/grid_2"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/settings_item" />

</LinearLayout>