<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/season_card_height"
    android:layout_marginHorizontal="@dimen/grid_2"
    android:layout_marginVertical="@dimen/grid_1"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/season_poster_iv"
            android:layout_width="@dimen/season_poster_width"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster_content_desc"
            app:layout_constraintEnd_toStartOf="@id/season_num_tv"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/season_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/season_poster_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Season Name" />

        <TextView
            android:id="@+id/air_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/season_poster_iv"
            app:layout_constraintTop_toBottomOf="@id/season_num_tv"
            tools:text="Aired: 2020-12-12" />

        <TextView
            android:id="@+id/watched_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_2"
            android:text="@string/episodes_watched"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ep_done_picker"
            app:layout_constraintStart_toEndOf="@id/season_poster_iv"
            app:layout_constraintTop_toBottomOf="@id/air_date_tv"
            tools:text="Episodes\nWatched: " />

        <NumberPicker
            android:id="@+id/ep_done_picker"
            android:layout_width="30dp"
            android:layout_height="120dp"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/NumberPickerStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/watched_tv"
            app:layout_constraintTop_toBottomOf="@id/air_date_tv" />

        <TextView
            android:id="@+id/ep_done_immutable_tv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAppearance="?textAppearanceBody2"
            android:theme="@style/NumberPickerStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/watched_tv"
            app:layout_constraintTop_toBottomOf="@id/air_date_tv" />

        <TextView
            android:id="@+id/max_ep_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_4"
            android:text="@string/out_of"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/watched_tv"
            app:layout_constraintStart_toEndOf="@id/watched_tv"
            app:layout_constraintTop_toTopOf="@id/watched_tv"
            tools:text="out of 12" />


        <TextView
            android:id="@+id/details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/details_button_content_desc"
            app:drawableTint="?colorOnSurface"
            android:padding="@dimen/grid_1"
            android:text="@string/details_button_text"
            android:textAppearance="?textAppearanceBody2"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_down_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>